--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="button_padding">10dp</dimen>
+    <dimen name="button_margin">8dp</dimen>
+
     <dimen name="progress_bar_size">128dp</dimen>
+    <dimen name="button_radius">25dp</dimen>
+
 </resources>
