--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -21,17 +21,55 @@
             map:layout_constraintStart_toStartOf="parent"
             map:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/status_textview"
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:text="@string/app_name"/>
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/task_textview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:text="@string/app_name"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/default_padding">
+
+                    <TextView
+                        android:id="@+id/status_textview"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@android:color/black"
+                        tools:text="London"/>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/default_padding"
+                        android:src="@drawable/ic_running"/>
+
+                    <TextView
+                        android:id="@+id/km_textview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/default_padding"
+                        android:text="0"
+                        android:textColor="@android:color/black"/>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/default_padding"
+                        android:src="@drawable/ic_pin_small"/>
+
+                    <TextView
+                        android:id="@+id/count_textview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/default_padding"
+                        tools:text="0"/>
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
 
             <fragment
                 android:id="@+id/map"
@@ -68,6 +106,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/round_button_selector_green"
+            android:drawableEnd="@drawable/ic_check_black"
+            android:drawablePadding="@dimen/button_margin"
+            android:drawableRight="@drawable/ic_check_black"
             android:text="@string/place"
             android:textColor="@android:color/white"
             map:layout_constraintBottom_toBottomOf="parent"
