--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="button_padding">10dp</dimen>
     <dimen name="button_margin">8dp</dimen>
+    <dimen name="default_padding">5dp</dimen>
 
     <dimen name="progress_bar_size">128dp</dimen>
     <dimen name="button_radius">25dp</dimen>
