--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,9 @@
       xmlns:tools="http://schemas.android.com/tools">
 
     <item
-        android:id="@+id/action_info"
-        android:title="Info"
+        android:id="@+id/action_refresh"
+        android:icon="@drawable/ic_refresh"
+        android:title="Refresh"
         app:showAsAction="always"/>
 
 </menu>
